--- a/styles/basix.css
+++ b/styles/basix.css
@@ -6,3 +6,20 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
 }
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  margin: 0 auto;
+  max-width: 970px;
+  padding: 0 20px;
+}
