--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,3 +1,9 @@
 :root {
-  --bg-main: lightgray;
+  --bg-main: #fff;
+  --bg-main-gray: #f6f6f6;
+
+  --font-color-gray: #828282;
+  --font-color-main: black;
+
+  --font-size-main: 18px;
 }
