--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,17 @@
 .header {
-  padding-top: 25px;
+  padding: 25px 0 0 0;
 }
 
 .nav {
+}
+
+.nav::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  margin: 32px 0 0 0;
+  background-color: var(--font-color-gray);
 }
 
 .nav-list {
@@ -15,10 +24,33 @@
 .nav-link {
   color: var(--font-color-gray);
   font-size: var(--font-size-main);
-  font-weight: 700;
-  transition: color 0.3s ease; /* Добавлено свойство transition */
+  font-weight: 400;
+  position: relative;
+  transition: color 0.3s ease; 
 }
+
+.nav-link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -10px;
+  height: 1px;
+  right: 100%; 
+  background-color: var(--font-color-main);
+  transition: right 0.3s ease;
+}
+
+.nav-link:hover::after {
+  right: 0;
+} 
 
 .nav-link:hover {
   color: var(--font-color-main);
+}
+
+@media (max-width: 500px) {
+  .header {
+    display: none;
+  }
 }
