--- a/styles/home.css
+++ b/styles/home.css
@@ -3,7 +3,6 @@ body {
 }
 
 .home {
-  text-align: center;
   padding: 0 0 70px 0;
 }
 
@@ -30,6 +29,6 @@ body {
   }
 
   .home-title {
-    width: min-content;
+    /* width: min-content; */
   }
 }
