--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,7 +2,7 @@
   --bg-main: #fff;
   --bg-main-gray: #f6f6f6;
 
-  --font-color-gray: #828282;
+  --font-color-gray: #4a4a4a;
   --font-color-main: black;
 
   --font-size-main: clamp(0.875rem, 0.717rem + 0.67vw, 1.125rem);
