--- a/styles/about.css
+++ b/styles/about.css
@@ -1,5 +1,4 @@
 .about {
-  text-align: center;
   background-color: var(--bg-main-gray);
   padding: 60px 0 100px 0;
 }
@@ -15,10 +14,24 @@
 .about-description-en {
   margin: 0 0 20px 0;
 }
+
+.about-description-ru,
+.about-description-en {
+  text-align: left;
+}
+
+.divider-container {
+  display: flow-root;
+}
+
 .divider {
   width: min(420px, 100%);
   height: 1px;
   background-color: var(--font-color-main);
   border: none;
-  /* margin: 0 auto; */ /* произошло схлопывание */
+  margin: 15px auto;
+}
+
+.about-container {
+  max-width: 785px;
 }
