--- a/styles/basix.css
+++ b/styles/basix.css
@@ -7,6 +7,10 @@ body {
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 a {
   text-decoration: none;
   color: unset;
@@ -26,10 +30,11 @@ h5,
 h6,
 p {
   margin: 0;
+  text-align: center;
 }
 
 .container {
   margin: 0 auto;
   max-width: 970px;
-  padding: 0 20px;
+  padding: 0 25px;
 }
